--- a/AtosZoo/src/main/resources/templates/listaAnimal.html
+++ b/AtosZoo/src/main/resources/templates/listaAnimal.html
@@ -35,6 +35,7 @@
 				<li><a class="dropdown-trigger" href="#!" data-target="menuCuidador">Cuidador________<i class="material-icons right">arrow_drop_down</i></a></li>
 				<li><a class="dropdown-trigger" href="#!" data-target="menuJaula">Jaula________<i class="material-icons right">arrow_drop_down</i></a></li>
 				<li><a class="dropdown-trigger" href="#!" data-target="menuAnimal">Animal________<i class="material-icons right">arrow_drop_down</i></a></li>
+				<li><a href="/logout">Logout <i class="material-icons right">exit_to_app</i></a></li>
 			</ul>
 		</div>
 	</nav>
